@@ -48,7 +48,7 @@ public class LaneView implements ILaneObserver, ActionListener {
 
 		frame.addWindowListener(new WindowAdapter() {
 			public void windowClosing(WindowEvent e) {
-				frame.hide();
+				frame.setVisible(false);
 			}
 		});
 
@@ -57,11 +57,11 @@ public class LaneView implements ILaneObserver, ActionListener {
 	}
 
 	public void show() {
-		frame.show();
+		frame.setVisible(true);
 	}
 
 	public void hide() {
-		frame.hide();
+		frame.setVisible(false);
 	}
 
 	private JPanel makeFrame(Party party) {
@@ -134,7 +134,6 @@ public class LaneView implements ILaneObserver, ActionListener {
 		if (lane.isPartyAssigned()) {
 			int numBowlers = le.getParty().getMembers().size();
 			while (!initDone) {
-				//System.out.println("chillin' here.");
 				try {
 					Thread.sleep(1);
 				} catch (Exception e) {
@@ -151,8 +150,6 @@ public class LaneView implements ILaneObserver, ActionListener {
 				// Button Panel
 				JPanel buttonPanel = new JPanel();
 				buttonPanel.setLayout(new FlowLayout());
-
-				Insets buttonMargin = new Insets(4, 4, 4, 4);
 
 				maintenance = new JButton("Maintenance Call");
 				JPanel maintenancePanel = new JPanel();
@@ -173,12 +170,12 @@ public class LaneView implements ILaneObserver, ActionListener {
 				for (int i = 0; i <= le.getFrameNum() - 1; i++) {
 					if (lescores[k][i] != 0)
 						scoreLabel[k][i].setText(
-							(new Integer(lescores[k][i])).toString());
+							( Integer.valueOf(lescores[k][i])).toString());
 				}
 
 				//Iterate through array of strings and add to ball label
 				String[][] allThrowScores = le.getThrowScores();
-				for (int col = 0; col < allThrowScores[k].length; col++) {
+				for (int col = 0; col < allThrowScores[k].length - 1; col++) {
 					ballLabel[k][col].setText(allThrowScores[k][col]);
 				}
 			}
